# Running_LLMs_Locally

./: README.md  executing_llms_with_llama_serve.md  pyproject.toml
1_llama.app/: executing_llms_with_llama_serve.md
