[project]
name = "running-llms"
version = "0.1.0"
description = "Here we will test several LLMs locally."
readme = "README.md"
authors = [
    { name = "EddyGiusepe", email = "eddychirinos.unac@gmail.com" }
]
requires-python = ">=3.13.7, <3.14"
dependencies = []

[dependency-groups]
dev = [
    "black==26.5.1",
]
